alignment correction

--- a/src/style.css
+++ b/src/style.css
@@ -7,9 +7,10 @@ header {
 
 h2 {
   padding-left: 150px;
+  opacity: 80%;
 }
 h1 {
-  padding-left: 170px;
+  padding-left: 150px;
   font-size: 18px;
 }
 
